--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">
+      <header class="header header-main">
         <div class="container">
           <div class="header__inner">
             <a href="#" class="logo">
@@ -36,7 +43,68 @@
         </div>
       </header>
       <main class="main"></main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="container">
+          <nav class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <p class="footer__menu-title"></p>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <p class="footer__menu-title"></p>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <p class="footer__menu-title"></p>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+            </ul>
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <p class="footer__menu-title"></p>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link"></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
