added new pages

--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header header-main">
+      <header class="header">
         <div class="container">
           <div class="header__inner">
             <a href="#" class="logo">
@@ -42,14 +42,7 @@
           </div>
         </div>
       </header>
-      <main class="main">
-        <section class="top">
-          <div class="container">
-            <h1 class="title">Leasing From D&M</h1>
-            <a href="#" class="top__link">FIND A CAR</a>
-          </div>
-        </section>
-      </main>
+      <main class="main"></main>
       <footer class="footer">
         <div class="container">
           <nav class="footer__menu">
