--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
             <a href="#" class="top__link">FIND A CAR</a>
           </div>
         </section>
+        <div class="slider">
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div
+                class="swiper-slide"
+                style="background-image: url('./images/slide-1.jpeg')"
+              ></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url('./images/slide-1.jpeg')"
+              ></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url('./images/slide-1.jpeg')"
+              ></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url('./images/slide-1.jpeg')"
+              ></div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
       </main>
       <footer class="footer">
         <div class="container">
