--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               ></div>
               <div
                 class="swiper-slide"
-                style="background-image: url('./images/slide-1.jpeg')"
+                style="background-image: url('./images/slide-2.jpeg')"
               ></div>
               <div
                 class="swiper-slide"
@@ -70,12 +70,67 @@
               ></div>
               <div
                 class="swiper-slide"
-                style="background-image: url('./images/slide-1.jpeg')"
+                style="background-image: url('./images/slide-2.jpeg')"
               ></div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
+        <section class="why-lease">
+          <div class="container">
+            <h2 class="section-title">Why Lease with D&M?</h2>
+            <ul class="why-lease__list">
+              <li class="why-lease__item">
+                <img
+                  src="./images/why-lease-1.svg"
+                  alt="Top Dealers"
+                  class="why-lease__img"
+                />
+                <h3 class="why-lease__title">Top Dealers</h3>
+                <p class="why-lease__text">
+                  TrueCar Certified Dealers compete for your business by providing
+                  discounted pricing on in-stock inventory.
+                </p>
+              </li>
+              <li class="why-lease__item">
+                <img
+                  src="./images/why-lease-2.svg"
+                  alt="Discounted Pricing"
+                  class="why-lease__img"
+                />
+                <h3 class="why-lease__title">Discounted Pricing</h3>
+                <p class="why-lease__text">
+                  View local inventory from the comfort of home and get access to
+                  guaranteed savings on the car of your choice.
+                </p>
+              </li>
+              <li class="why-lease__item">
+                <img
+                  src="./images/why-lease-3.svg"
+                  alt="Lower Payments"
+                  class="why-lease__img"
+                />
+                <h3 class="why-lease__title">Lower Payments</h3>
+                <p class="why-lease__text">
+                  Get discounted pricing when you shop for a car or truck using TrueCar
+                  and save on your lease payment.
+                </p>
+              </li>
+              <li class="why-lease__item">
+                <img
+                  src="./images/why-lease-4.svg"
+                  alt="Easy Upgrade"
+                  class="why-lease__img"
+                />
+                <h3 class="why-lease__title">Easy Upgrade</h3>
+                <p class="why-lease__text">
+                  Easy to upgrade to the newest vehicle model every few years if you would
+                  like to be modern and comfortable
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="container">
