welcome video section

--- a/index.html
+++ b/index.html
@@ -167,6 +167,22 @@
             </div>
           </div>
         </section>
+        <section class="welcome-video">
+          <div class="container">
+            <h2 class="section-title welcome-video__title">WELCOME TO D&M LEASING</h2>
+            <p class="welcome-video__text">Find out how easy it is to lease from D&M</p>
+            <iframe
+              class="welcome-video__content"
+              width="1000"
+              height="500"
+              src="https://www.youtube.com/embed/uhCyy9BoTTc?si=UIy40XqSYx5xtwoj&amp;controls=0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="container">
