--- a/index.html
+++ b/index.html
@@ -183,6 +183,60 @@
             ></iframe>
           </div>
         </section>
+        <section class="important">
+          <div class="container">
+            <h2 class="section-title important__title">Important Things to Consider</h2>
+            <p class="important__text">
+              Depending on your circumstances and what is important to you, a lease could
+              be a great option for your next vehicle. Below are some important factors
+              that may influence your decision.
+            </p>
+            <ul class="important__list">
+              <li class="important__item">
+                <img
+                  src="./images/important-1.jpeg"
+                  alt="jeep"
+                  class="important__item-image"
+                />
+                <p class="important__item-text">
+                  Monthly payments on leases are generally 20% - 30% cheaper than loans
+                </p>
+              </li>
+              <li class="important__item">
+                <img
+                  src="./images/important-2.jpeg"
+                  alt="Toyota"
+                  class="important__item-image"
+                />
+                <p class="important__item-text">
+                  You may be eligible for a tax break if you use the leased vehicle for
+                  business purposes
+                </p>
+              </li>
+              <li class="important__item">
+                <img
+                  src="./images/important-3.jpeg"
+                  alt="red car"
+                  class="important__item-image"
+                />
+                <p class="important__item-text">
+                  Easy to upgrade to the newest vehicle model every few years
+                </p>
+              </li>
+              <li class="important__item">
+                <img
+                  src="./images/important-4.jpeg"
+                  alt="Chevrolet"
+                  class="important__item-image"
+                />
+                <p class="important__item-text">
+                  There are often fees charged if you drive more than your lease's mileage
+                  allowance
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="container">
