--- a/new-cars.html
+++ b/new-cars.html
@@ -17,13 +17,13 @@
       <header class="header">
         <div class="container">
           <div class="header__inner">
-            <a href="#" class="logo">
+            <a href="./index.html" class="logo">
               <img src="./images/logo.svg" alt="D&M leasing" class="logo__img" />
             </a>
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__list-item">
-                  <a href="#" class="menu__list-link">NEW CARS</a>
+                  <a href="#" class="menu__list-link menu__list-link--active">NEW CARS</a>
                 </li>
                 <li class="menu__list-item">
                   <a href="#" class="menu__list-link">PRE-OWNED CARS</a>
@@ -35,14 +35,40 @@
                   <a href="#" class="menu__list-link">LEASE VS BUY</a>
                 </li>
                 <li class="menu__list-item">
-                  <a href="#" class="menu__list-link">CONTACT US</a>
+                  <a href="./contacts.html" class="menu__list-link">CONTACT US</a>
                 </li>
               </ul>
             </nav>
           </div>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="main">
+        <section class="blog">
+          <div class="container">
+            <div class="blog__items">
+              <div class="blog__item">
+                <img
+                  src="./images/blog-1.jpeg"
+                  alt="jeep going uphill"
+                  class="blog__item-img"
+                />
+                <h4 class="blog__item-title">An easier way to buy your next Toyota</h4>
+                <a href="#" class="blog__item-link">more</a>
+              </div>
+              <div class="blog__item">
+                <img
+                  src="./images/blog-2.jpeg"
+                  alt="dog leaning out of the window"
+                  class="blog__item-img"
+                />
+                <h4 class="blog__item-title">An easier way to buy your next Toyota</h4>
+                <a href="#" class="blog__item-link">more</a>
+              </div>
+            </div>
+            <a href="#" class="show-more-link">SHOW MORE</a>
+          </div>
+        </section>
+      </main>
       <footer class="footer">
         <div class="container">
           <nav class="footer__menu">
