choose your car section

--- a/new-cars.html
+++ b/new-cars.html
@@ -43,6 +43,186 @@
         </div>
       </header>
       <main class="main">
+        <section class="choose">
+          <div class="container">
+            <h2 class="section-title">Choose your car</h2>
+            <div class="tabs">
+              <div class="tabs__btn">
+                <button class="tabs__btn-item tabs__btn-item--active">
+                  Car and Minivan
+                </button>
+                <button class="tabs__btn-item">Trucks</button>
+                <button class="tabs__btn-item">Crossovers & SUVs</button>
+                <button class="tabs__btn-item">Electrified</button>
+              </div>
+              <div class="tabs__content">
+                <div class="tabs__content-item">
+                  <div class="card">
+                    <img
+                      src="./images/card-1.jpeg"
+                      alt="Toyota Crown 2023"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Toyota Crown 2023</h4>
+                      <p class="card__text">starting from $ 39900</p>
+                      <p class="card__price">$ 650/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img
+                      src="./images/card-2.jpeg"
+                      alt="Prius Prime 2023"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Prius Prime 2023</h4>
+                      <p class="card__text">starting from $ 45900</p>
+                      <p class="card__price">$ 450/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img
+                      src="./images/card-3.jpeg"
+                      alt="Toyota Prius 2023"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Toyota Prius 2023</h4>
+                      <p class="card__text">starting from $ 50900</p>
+                      <p class="card__price">$ 400/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img
+                      src="./images/card-4.jpeg"
+                      alt="Hyundai Kona 2023"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Hyundai Kona 2023</h4>
+                      <p class="card__text">starting from $ 85900</p>
+                      <p class="card__price">$510/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                </div>
+                <div class="tabs__content-item">
+                  <div class="card">
+                    <img
+                      src="./images/card-5.jpeg"
+                      alt="Ford Explorer 2023"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Ford Explorer 2023</h4>
+                      <p class="card__text">starting from $ 93900</p>
+                      <p class="card__price">$1,013/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img
+                      src="./images/card-6.jpeg"
+                      alt="Santa  Fe 2023"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Santa Fe 2023</h4>
+                      <p class="card__text">starting from $ 38900</p>
+                      <p class="card__price">$739/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img
+                      src="./images/card-7.jpeg"
+                      alt="KIA Niro 2023"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">KIA Niro 2023</h4>
+                      <p class="card__text">starting from $ 37900</p>
+                      <p class="card__price">$554/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img
+                      src="./images/card-8.jpeg"
+                      alt="Chevrolet Silverado"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Chevrolet Silverado</h4>
+                      <p class="card__text">starting from $ 62260</p>
+                      <p class="card__price">$1,032/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                </div>
+                <div class="tabs__content-item">
+                  <div class="card">
+                    <img
+                      src="./images/card-9.jpeg"
+                      alt="Honda CR-V 2023"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Honda CR-V 2023</h4>
+                      <p class="card__text">starting from $ 45900</p>
+                      <p class="card__price">$591/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img
+                      src="./images/card-10.jpeg"
+                      alt="Hyundai Tucson"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Hyundai Tucson</h4>
+                      <p class="card__text">starting from $ 50900</p>
+                      <p class="card__price">$528/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img
+                      src="./images/card-11.jpeg"
+                      alt="Chevrolet Equinox"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Chevrolet Equinox</h4>
+                      <p class="card__text">starting from $ 70900</p>
+                      <p class="card__price">$471/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img
+                      src="./images/card-12.jpeg"
+                      alt="Jeep Wrangler 2023"
+                      class="card__img"
+                    />
+                    <div class="card__content">
+                      <h4 class="card__title">Jeep Wrangler 2023</h4>
+                      <p class="card__text">starting from $ 89900</p>
+                      <p class="card__price">$997/mo</p>
+                    </div>
+                    <a href="#" class="card__link">see details</a>
+                  </div>
+                </div>
+              </div>
+              <a href="#" class="show-more-link">SHOW MORE</a>
+            </div>
+          </div>
+        </section>
         <section class="blog">
           <div class="container">
             <div class="blog__items">
